<resources>
    <string name="app_name">GeekNews</string>
    <string name="a">A pure reading App for you</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="v2ex">V2EX</string>
    <string name="collect">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="options">选项</string>
    <string name="info">资讯</string>
    <string name="daily">日报</string>
    <string name="theme">主题</string>
    <string name="specialcolumn">专栏</string>
    <string name="hot">热门</string>
    <string name="todayNews">今日热闻</string>
    <string name="android">ANDROID</string>
    <string name="ios">IOS</string>
    <string name="front">前端</string>
    <string name="welfare">福利</string>
    <string name="optionDate">选择日期</string>
    <string name="sure">确定</string>
    <string name="design">设计</string>
    <string name="after">后端</string>
    <string name="product">产品</string>
    <string name="read">阅读</string>
    <string name="home">首页特别展示</string>
    <string name="nodeNavigation">节点导航</string>
</resources>
